chore: sync new assets, docs, and scripts; update pages & config

--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; upgrade-insecure-requests">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>Page not found — EQLabs.ai</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="description" content="404 — Page not found. Redirecting to the EQLabs.ai homepage.">
@@ -18,7 +20,8 @@
   </style>
   <link rel="icon" href="/favicon.ico">
   <script src="/scripts/gate.js" defer=""></script>
-</head>
+
+  <link rel="stylesheet" href="/assets/theme.css"></head>
 <body>
   <div class="wrap">
     <h1>404 — Not Found</h1>
