--- a/demo-thanks.html
+++ b/demo-thanks.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://eqlabs.ai/og-image.png">
   <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/assets/theme.css">
   <script src="/scripts/monitor.js" defer=""></script>
   <script src="/scripts/gate.js" defer=""></script>
 </head>
@@ -39,7 +40,7 @@
       <h1 class="text-3xl md:text-4xl font-semibold">Thanks — we got your request</h1>
       <p class="mt-3 text-slate-700">We’ll email you shortly to coordinate a demo. In the meantime, you can reach us at
         <a class="hover:underline" href="mailto:info@eqlabs.ai">info@eqlabs.ai</a> or read the
-        <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>.</p>
+        <a class="hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>.</p>
       <div class="mt-6">
         <a href="/" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Back to home</a>
       </div>
