--- a/eqlabs.html
+++ b/eqlabs.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://eqlabs.ai/og-image.png">
   <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/assets/theme.css">
   <script src="/scripts/monitor.js" defer=""></script>
   <script src="/scripts/gate.js" defer=""></script>
 </head>
@@ -253,7 +254,7 @@
     <div class="mx-auto max-w-6xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm text-slate-600">
       <div>© <span id="y"></span> EQLabs.ai — The Equator Intelligence Lab</div>
       <div class="flex items-center gap-4">
-        <a class="hover:underline" target="_blank" href="https://arxiv.org/abs/2501.00257">arXiv</a>
+        <a class="hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">arXiv</a>
         <a class="hover:underline" href="#">LinkedIn</a>
         <a class="hover:underline" href="mailto:info@eqlabs.ai">Email</a>
         <a class="hover:underline" href="/privacy.html">Privacy</a>
