--- a/equator.html
+++ b/equator.html
@@ -13,8 +13,9 @@
   <link rel="canonical" href="https://eqlabs.ai/equator.html">
   <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="/scripts/monitor.js" defer></script>
-  <script src="/scripts/gate.js" defer></script>
+  <link rel="stylesheet" href="/assets/theme.css">
+  <script src="/scripts/monitor.js" defer=""></script>
+  <script src="/scripts/gate.js" defer=""></script>
 </head>
 
 <body class="bg-white text-slate-900 antialiased selection:bg-black/10">
@@ -122,5 +123,6 @@
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 
 
-</body></html>
 
+
+</body></html>
