--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   }</script>
   <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/assets/theme.css">
   <script src="/scripts/monitor.js" defer=""></script>
   <script src="/scripts/gate.js" defer=""></script>
 </head>
@@ -43,6 +44,7 @@
           <a href="#about" class="hover:text-black">About</a>
           <a href="#research" class="hover:text-black">Research</a>
           <a href="#video" class="hover:text-black">Video</a>
+          <a href="/meetup.html" class="hover:text-black">Meetup</a>
           <a href="/blog/" class="hover:text-black">Blog</a>
           <a href="/founders-circle.html" class="hover:text-black">Founders Circle</a>
           <a href="#benchmark" class="hover:text-black">Benchmark</a>
