--- a/founders-circle.html
+++ b/founders-circle.html
@@ -38,6 +38,7 @@
   }</script>
   <link rel="icon" href="/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/assets/theme.css">
   <script src="/scripts/monitor.js" defer=""></script>
   <script src="/scripts/gate.js" defer=""></script>
 </head>
