--- a/terms.html
+++ b/terms.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; upgrade-insecure-requests">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>Terms of Use — EQLabs.ai</title>
   <meta name="description" content="Terms of Use for EQLabs.ai: acceptable use, content, privacy, disclaimers, changes, and contact.">
   <link rel="icon" href="/favicon.ico">
@@ -14,7 +16,8 @@
     a { color: #0f172a; }
     .footer { border-top: 1px solid #e2e8f0; margin-top: 32px; padding-top: 16px; font-size: 14px; color: #475569; }
   </style>
-</head>
+
+  <link rel="stylesheet" href="/assets/theme.css"></head>
 <body>
   <main class="wrap">
     <meta property="og:image" content="https://eqlabs.ai/og-image.png">
@@ -45,7 +48,7 @@
     <p>Questions: <a href="mailto:info@eqlabs.ai">info@eqlabs.ai</a></p>
 
     <div class="footer">
-      <a href="/">Home</a> · <a href="/privacy.html">Privacy</a>
+      <a href="/">Home</a> · <a href="/privacy.html">Privacy</a> · <a class="hover:underline" href="/terms.html">Terms</a>
     </div>
   </main>
 
