--- a/eqlabs.html
+++ b/eqlabs.html
@@ -45,9 +45,7 @@
         <div class="lg:col-span-7">
           <p class="text-xs uppercase tracking-wider text-slate-500">NYC • Stealth</p>
           <h1 class="mt-3 text-4xl md:text-6xl font-semibold leading-tight">The Equator Intelligence Lab</h1>
-          <p class="mt-5 text-lg text-slate-700 max-w-2xl">A focused team of PhD researchers, engineers, and graduate
-            contributors developing deterministic frameworks that make AI reasoning measurable, explainable, and
-            trustworthy.</p>
+          <p class="mt-5 text-lg text-slate-700 max-w-2xl">An applied research lab advancing deterministic evaluation of LLM reasoning. We ship protocols, datasets, and measurement tools that make reasoning performance measurable, reproducible, and auditable.</p>
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="https://arxiv.org/abs/2501.00257" target="_blank" rel="noopener" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Read the EQUATOR
               paper</a>
@@ -123,11 +121,12 @@
       <div class="grid md:grid-cols-5 gap-10 items-start">
         <div class="md:col-span-3">
           <h2 class="text-2xl font-semibold">Research</h2>
-          <p class="mt-4 text-slate-700">Our paper, <a class="underline underline-offset-4 decoration-slate-300 hover:decoration-slate-700" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>, formalizes a deterministic approach to judge open‑ended reasoning. We prioritize <span class="font-medium">binary criteria</span>, <span class="font-medium">groundedness</span>, and <span class="font-medium">reproducibility</span>.</p>
+          <p class="mt-4 text-slate-700">Our paper, <a class="underline underline-offset-4 decoration-slate-300 hover:decoration-slate-700" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>, formalizes a deterministic approach to judge open‑ended reasoning with <span class="font-medium">binary criteria</span>, <span class="font-medium">groundedness</span>, <span class="font-medium">reproducibility</span>, and <span class="font-medium">preregistered protocols</span>.</p>
           <ul class="mt-4 space-y-3 text-slate-700 list-disc list-inside">
             <li>Deterministic scoring beyond surface fluency</li>
             <li>Human‑validated reference sets &amp; semantic matching</li>
             <li>Cost‑efficient local evaluators (small LLMs)</li>
+            <li>Inter‑rater agreement checks (κ) and error taxonomy</li>
           </ul>
         </div>
         <div class="md:col-span-2 rounded-2xl border border-slate-200 p-6">
