--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
         <div class="lg:col-span-7">
           <p class="text-xs uppercase tracking-wider text-slate-500">NYC • Stealth</p>
           <h1 class="mt-3 text-4xl md:text-6xl font-semibold leading-tight">The Equator Intelligence Lab</h1>
-          <p class="mt-5 text-lg text-slate-700 max-w-2xl">A focused team of PhD researchers, engineers, and graduate
-            contributors developing deterministic frameworks that make AI reasoning measurable, explainable, and
-            trustworthy.</p>
+          <p class="mt-5 text-lg text-slate-700 max-w-2xl">An applied research lab advancing deterministic evaluation of LLM reasoning. We design protocols, datasets, and measurement tools that make reasoning performance measurable, reproducible, and auditable.</p>
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="https://arxiv.org/abs/2501.00257" target="_blank" rel="noopener" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Read the EQUATOR
               paper</a>
@@ -78,22 +76,19 @@
             <span class="rounded-full border border-slate-300 px-3 py-1">Human‑aligned metrics</span>
           </div>
           <div class="mt-8 rounded-2xl border border-slate-200 p-6">
-            <h2 class="text-xl font-semibold">EQUATOR: Evaluating LLM performance</h2>
+            <h2 class="text-xl font-semibold">EQUATOR: Deterministic evaluation of LLM reasoning</h2>
             <div class="mt-4 grid md:grid-cols-3 gap-6 text-slate-700">
               <div>
                 <div class="text-slate-500 text-xs uppercase tracking-wider">Overview</div>
-                <p class="mt-1">A deterministic framework for evaluating LLMs, focusing on factual accuracy and the
-                  reasoning quality of answers to open‑ended questions.</p>
+                <p class="mt-1">A deterministic framework to evaluate open‑ended reasoning with fixed protocols, binary criteria, and auditable logs.</p>
               </div>
               <div>
                 <div class="text-slate-500 text-xs uppercase tracking-wider">Method</div>
-                <p class="mt-1">Pairs questions with human‑verified answers via a vector database and employs
-                  smaller, locally hosted LLMs to reduce reliance on human evaluators.</p>
+                <p class="mt-1">Blind adjudication using small local LLMs with human tie‑breakers; preregistered seeds and prompts; grounded retrieval for evidence.</p>
               </div>
               <div>
                 <div class="text-slate-500 text-xs uppercase tracking-wider">Objective</div>
-                <p class="mt-1">Provide a robust, scalable alternative to multiple‑choice benchmarks, which
-                  fall short for open‑ended reasoning.</p>
+                <p class="mt-1">Provide a robust, reproducible alternative to multiple‑choice benchmarks that under‑measure reasoning.</p>
               </div>
             </div>
           </div>
@@ -199,11 +194,12 @@
       <div class="grid md:grid-cols-5 gap-10 items-start">
         <div class="md:col-span-3">
           <h2 class="text-2xl font-semibold">Research</h2>
-          <p class="mt-4 text-slate-700">Our paper, <a class="underline underline-offset-4 decoration-slate-300 hover:decoration-slate-700" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>, formalizes a deterministic approach to judge open‑ended reasoning. We prioritize <span class="font-medium">binary criteria</span>, <span class="font-medium">groundedness</span>, and <span class="font-medium">reproducibility</span>.</p>
+          <p class="mt-4 text-slate-700">Our paper, <a class="underline underline-offset-4 decoration-slate-300 hover:decoration-slate-700" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator</a>, formalizes a deterministic approach to judge open‑ended reasoning. We prioritize <span class="font-medium">binary criteria</span>, <span class="font-medium">groundedness</span>, <span class="font-medium">reproducibility</span>, and <span class="font-medium">preregistered protocols</span>.</p>
           <ul class="mt-4 space-y-3 text-slate-700 list-disc list-inside">
             <li>Deterministic scoring beyond surface fluency</li>
             <li>Human‑validated reference sets &amp; semantic matching</li>
             <li>Cost‑efficient local evaluators (small LLMs)</li>
+            <li>Inter‑rater agreement checks (κ) and error taxonomy</li>
           </ul>
         </div>
         <div class="md:col-span-2 rounded-2xl border border-slate-200 p-6">
@@ -281,6 +277,7 @@
             <li>Units/Format (binary, when applicable)</li>
             <li>Safety/Policy (binary)</li>
           </ul>
+          <p class="mt-4 text-slate-600 text-sm">We report inter‑rater agreement (Cohen’s κ), maintain versioned datasets, and log all trials for auditability.</p>
           <p class="mt-4 text-slate-600 text-sm">We log all trials with dataset versioning, flags, and per‑criterion outcomes for auditability.</p>
           <div class="mt-4">
             <a href="/demo.html" class="rounded-full bg-black text-white px-5 py-3 text-sm font-medium hover:bg-slate-900">Request a demo</a>
