fix(security): add rel=noopener to external _blank link in eqlabs.html

--- a/eqlabs.html
+++ b/eqlabs.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="bg-white text-slate-900 antialiased selection:bg-black/10">
-  <header class="sticky top-0 inset-x-0 z-50 bg-white/90 backdrop-blur border-b border-slate-200">
+  <header class="sticky top-0 inset-x-0 z-50 bg-white/90 border-b border-slate-200">
     <div class="mx-auto max-w-7xl px-4">
       <nav class="h-16 flex items-center justify-between">
         <a href="#top" class="flex items-center gap-3">
@@ -236,7 +236,7 @@
             <li><span class="text-slate-500">Email:</span> <a class="hover:underline" href="mailto:info@eqlabs.ai">info@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Investors:</span> <a class="hover:underline" href="mailto:invest@eqlabs.ai">invest@eqlabs.ai</a></li>
             <li><span class="text-slate-500">Paper:</span> <a class="hover:underline" target="_blank" rel="noopener" href="https://arxiv.org/abs/2501.00257">EQUATOR Evaluator (arXiv)</a></li>
-            <li><span class="text-slate-500">Community:</span> <a class="hover:underline" href="#" target="_blank">LinkedIn Research Group</a></li>
+            <li><span class="text-slate-500">Community:</span> <a class="hover:underline" href="#" target="_blank" rel="noopener">LinkedIn Research Group</a></li>
           </ul>
         </div>
         <div class="rounded-2xl border border-slate-200 p-6">
